styles.css
.container {
    display: flex;
    flex-wrap: wrap;
    width: 52vh;
    height: 52vh;
    flex: 0 0 52vh;
    border: 2px solid grey;

}

.square {
    width: 13vh;
    height: 13vh;
    border: 2px solid gray;
    background-color: black;
    box-sizing: border-box;
    opacity: 0;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 25px;
    padding-top: 5vh;
    box-sizing: border-box;
}

